--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Austin Eng
-description: Austin is a student in Digital Media Design at the University of Pennsylvania studying Computer Graphics and Computer Science
+description: "Austin Eng - Projects, Code, and Blog of a Digital Media Design student at the University of Pennsylvania"
 
 baseurl: ""
 
