update meta desk

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Austin Eng
-description: "Austin Eng - Projects, Code, and Blog of a Digital Media Design student at the University of Pennsylvania"
+description: "Austin Eng - Projects, Code, and Blog of a Computer Graphics student at the University of Pennsylvania"
 
 baseurl: ""
 
