--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Austin Eng
-description: "Austin Eng - Projects, Code, and Blog of a Computer Graphics student at the University of Pennsylvania"
+name: "Austin Eng - Projects, Code, and Blog"
+description: "Austin Eng is a Computer Graphics student at the University of Pennsylvania with many interest ranging from Computer Science to Robotics and Computer Vision. He has interned at Walt Disney Animation Studios as well as multiple software companies."
 
 baseurl: ""
 
