--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "private": true,
   "scripts": {
-    "webpack": "NODE_ENV=production webpack -p --progress --colors",
+    "build": "NODE_ENV=production webpack -p --progress --colors",
     "dev": "webpack --progress --colors --watch"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
